<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rolling Pirates</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="begin">New Game</string>
    <string name="settings">Settings</string>
    <string name="level">Level</string>
    <string name="help">Help</string>
	<string name="exit">Exit</string>
	<string name="sound">Sound</string>
	<string name="effect">Effect</string>
	<string name="music">Music</string>
	<string name="vibrate">Vibrate</string>
</resources>