<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/thelayout"
    android:orientation="vertical"
    android:background="@drawable/bg_tile" >
  
     <TextView
        style="@style/Title"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="40sp"
        android:text="@string/app_name" />
    <TextView
        android:id="@+id/begin"
        style="@style/MenuFont"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/begin" />
    
    <TextView
        android:id="@+id/settings"
        style="@style/MenuFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/settings" />
	
    <TextView
        android:id="@+id/help"
        style="@style/MenuFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/help" />

    <TextView
        android:id="@+id/exit"
        style="@style/MenuFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/exit" />

</LinearLayout>