<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/thelayout"
    android:orientation="vertical" >
  
    <TextView
        android:id="@+id/sound"
        style="@style/MenuFont"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound" />
    
    <TextView
        android:id="@+id/effects"
        style="@style/MenuFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/effect" />
     <TextView
        android:id="@+id/music"
        style="@style/MenuFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/music" />
      <TextView
        android:id="@+id/vibrate"
        style="@style/MenuFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/vibrate" />
    

</LinearLayout>